--- a/.classpath
+++ b/.classpath
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-<<<<<<< HEAD
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16"/>
-	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="output" path="build/classes"/>
-=======
-	<classpathentry kind="src" path="DS23.project/src"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="Main/src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/polo/DWHW/lab10/HW10/jsoup-1.13.1.jar"/>
-	<classpathentry kind="output" path="Main/bin"/>
->>>>>>> d0497bb01930273042dbdf8be48e23f5d8630f62
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/liu/Desktop/Data Structure/final_project(codes)/src/jsoup-1.13.1.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
